--- a/pages/speak.css
+++ b/pages/speak.css
@@ -16,6 +16,7 @@
 	overflow: auto;
 	font-size: var(--font-size);
 	line-height: 1.2rem;
+	padding: 8px;
 }
 #speak-controls {
 	display: flex;
@@ -30,7 +31,9 @@
 	justify-content: start;
 	align-items: center;
 }
-.speak-select {
+.speak-select,
+.speak-select:focus,
+.speak-select:active {
 	width: auto;
 	min-width: 100px;
 	min-height: 24px;
