--- a/pages/speak.css
+++ b/pages/speak.css
@@ -18,6 +18,19 @@
 	line-height: 1.2rem;
 	padding: 8px;
 }
+#speak-count {
+	position: absolute;
+	bottom: 0px;
+	right: 8px;
+	width: 100% !important;
+	text-align: end;
+	font-size: var(--font-size-xsm);
+	font-style: italic;
+	line-height: 1.2rem;
+	padding: 0 8px;
+	opacity: 0.7;
+	pointer-events: none;
+}
 #speak-controls {
 	display: flex;
 	min-width: 100%;
@@ -40,38 +53,15 @@
 	max-height: 24px;
 	line-height: 24px;
 }
-#speak-player {
-	width: 300px;
-	background-color: var(--input-dark-back);
-	color: var(--input-dark-text);
-	border: 1px solid var(--input-dar-border);
-	border-radius: var(--border-radius);
-	padding: 4px;
-}
-
-/* Hide the default audio controls */
-audio::-webkit-media-controls-panel {
-	background-color: var(--input-dark-back);
-	border-radius: var(--border-radius);
-	border-color: transparent;
-}
-
-/* Style Play/Pause button */
-audio::-webkit-media-controls-play-button {
-	background-color: #00c38a;
-	border-radius: 50%;
-}
-
-/* Style Volume Control */
-audio::-webkit-media-controls-volume-slider {
-	background-color: #00c38a;
-}
 
 #speak-player-controls {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	gap: 8px;
+	border: var(--border);
+	border-radius: var(--border-radius);
+	padding: 8px;
 }
 .speak-icon {
 	width: 30px;
@@ -94,8 +84,33 @@ audio::-webkit-media-controls-volume-slider {
 }
 
 #speak-progress {
-	flex: 1;
-	margin: 0 8px;
+	width: 100%;
+	appearance: none;
+	background: var(--theme-dark-offset);
+	border: var(--border);
+	border-radius: var(--border-radius);
+	height: 30px;
+	max-height: 30px;
+	min-height: 30px;
+	border-radius: 5px;
+	outline: none;
+}
+
+#speak-progress::-webkit-slider-thumb {
+	appearance: none;
+	width: 8px;
+	height: 16px;
+	background: var(--color-accent);
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+#speak-progress::-moz-range-thumb {
+	width: 8px;
+	height: 16px;
+	background: var(--color-accent);
+	border-radius: 4px;
+	cursor: pointer;
 }
 
 #speak-player-box {
